# automate-groceries

./: README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  docker-compose.yaml  main.py  utils.py
backend/db/: models.py  query_models.py
frontend/: Dockerfile  sol.py
